--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   get: ^4.3.8
+  firebase_auth: ^3.1.1
+  cloud_firestore: ^2.5.3
+  firebase_core: ^1.6.0
 
 dev_dependencies:
   flutter_test:
