--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^2.5.3
   firebase_core: ^1.6.0
   google_sign_in: ^5.2.1
+  flutter_local_notifications: ^9.0.2
+  firebase_messaging: ^11.0.0
 
 dev_dependencies:
   flutter_test:
