--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^5.2.1
   flutter_local_notifications: ^9.0.2
   firebase_messaging: ^11.0.0
+  google_maps_flutter: ^2.1.0
 
 dev_dependencies:
   flutter_test:
