--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_local_notifications: ^9.0.2
   firebase_messaging: ^11.0.0
   google_maps_flutter: ^2.1.0
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
